html5新的内容 css3新内容差点

--- a/深入强缓存和协商缓存.md
+++ b/深入强缓存和协商缓存.md
@@ -89,3 +89,9 @@ if-modified-since: Mon, 24 Dec 2018 09:49:49 GMT
 
 
 
+
+
+
+
+![img](https://uploadfiles.nowcoder.com/images/20190312/311436_1552361773903_9DC69E327B4B3691E94CD9D52D10E2C1)
+
