主要看了async/await 还有同步异步的根源

--- a/遇到的手撕代码合集.md
+++ b/遇到的手撕代码合集.md
@@ -15,3 +15,39 @@ sleep(1000).then(function(res) =>{
 
 
 
+# 数组去重
+
+```js
+const arr = [1,2,3,45,56,77,77,8,7,7,3]
+// 用include判断新的数组内是否含有原数组中的元素
+const newArray1 = [];
+for(let i = 0; i<arr.length; i++) {
+    if(!newArray1.includes(arr[i])) {
+        newArray1.push(arr[i]);
+    }
+}
+
+// 用es6的set
+const newArray2 = [... new Set(arr)]; // Set类似于数组，不过不允许内部元素重复
+
+// 用filter 然后用lastIndexOf与原本的index判断
+const newArray3 = arr.filter(item, index) {
+    return arr.lastIndexOf(item) === index
+}
+
+//利用sort函数先排序，然后从idnex为1的地方开始进行与前一个元素比较，如果不同，push进新的数组
+
+const newArray4 = []
+arr = arr.sort()
+for(let i = 1; i<arr.length;i++) {
+    if(arr[i] !== arr[i-1]){
+        newArray4.push(arr[i])
+    }
+}
+
+```
+
+
+
+
+
