手写bind/call/apply

--- a/深拷贝与浅拷贝.md
+++ b/深拷贝与浅拷贝.md
@@ -44,8 +44,10 @@ function deepClone(obj) {
 function deepClone(obj){
     let _obj = JSON.stringify(obj),
         objClone = JSON.parse(_obj);
+    // let _obj = JSON.parse(JSON.stringify(obj)) 
     return objClone
 }  
+
 let a=[0,1,[2,3],4],
     b=deepClone(a);
 a[0]=1;
