复习（发现很多错字）

--- a/深拷贝与浅拷贝.md
+++ b/深拷贝与浅拷贝.md
@@ -21,16 +21,30 @@ function deepClone(obj) {
   let objClone = Array.isArray(obj) ? [] : {}
   if(obj && typeof obj === 'object') {
     for( key in obj ) {
-      if(obj.hasOwnProperty(key)) {
-        if(obj[key] && typeof obj[key] === 'object') {
-          objClone[key] = deepClone(obj[key])
-        } else {
-          objClone[key] = obj[key] 
-        }
+      if(obj[key] && typeof obj[key] === 'object') {
+        objClone[key] = deepClone(obj[key])
+      } else {
+        objClone[key] = obj[key] 
       }
     } 
   }
   return objClone
+}
+
+//  // 深拷贝
+function clone(obj, map = new Map) { // map用于防止循环引用， 
+  if(typeof obj === 'object') {
+    let cloneObj = Array.isArray(obj) ? {} : []
+    if(map.get(obj)) {
+      return map.get(obj)
+    }
+    map.set(obj, cloneObj)
+    for(let key in obj) {
+      obj[key] = clone(obj[key], map)
+    }
+  } else {
+    return obj
+  }
 }
 ```
 
