--- a/性能优化.md
+++ b/性能优化.md
@@ -10,7 +10,7 @@
 
 ## DNS解析
 
-这里其实没啥操作空间（对于端来说）
+这里其实没啥操作空间（对于前端来说）
 
 DNS解析的顺序
 
@@ -37,7 +37,7 @@ DNS解析的顺序
 - CDN的使用
   静态资源的请求可以采用CDN，减轻服务器压力
 - 负载均衡
-  我知道的就是反向代理，分摊服务器压力，（顺带提一嘴，正向代理是代理服务器，反向代理是代理服务器）
+  我知道的就是反向代理，分摊服务器压力，（顺带提一嘴，正向代理是代理客户端，反向代理是代理服务器）
 
 ## 服务器响应
 
