--- a/深入强缓存和协商缓存.md
+++ b/深入强缓存和协商缓存.md
@@ -71,7 +71,7 @@ etag: '5c20abbd-e2e8'
 last-modified: Mon, 24 Dec 2018 09:49:49 GMT
 
 // request header 变为
-if-none-matched: '5c20abbd-e2e8'
+if-none-match: '5c20abbd-e2e8'
 if-modified-since: Mon, 24 Dec 2018 09:49:49 GMT
 ```
 
