近期复习更新

--- a/跨域.md
+++ b/跨域.md
@@ -74,7 +74,7 @@ app.listen(8080);
 
 
 
-### CROS
+### CORS
 
 > 跨域资源共享（`CORS`）是一种机制，是 `W3C` 标准。它允许浏览器向跨源服务器，发出 `XMLHttpRequest` 或 `Fetch` 请求。并且整个 `CORS` 通信过程都是浏览器自动完成的，不需要用户参与。
 >
