--- a/深入强缓存和协商缓存.md
+++ b/深入强缓存和协商缓存.md
@@ -84,7 +84,7 @@ if-modified-since: Mon, 24 Dec 2018 09:49:49 GMT
 首先之前的http1.0及以前是没有etag的，只有一个last-modified，但是就会出现以下情况，
 
 1. 只是文件的日期被改了，文件内容没有动，
-2. last-modified只能精确到秒级，一些资源变化太快的话，无法做出判断
+2. last-modified只能精确到**秒级**，一些资源变化太快的话，无法做出判断
 3. 服务器拉夸，时间不对
 
 
